--- a/package.json
+++ b/package.json
@@ -2,13 +2,40 @@
   "name": "docker_web_app",
   "version": "0.0.1",
   "description": "Node.js on Docker",
-  "author": "First Last <first.last@example.com>",
-  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next export",
+    "node": "node server.js",
+    "rimraf": "rimraf node_modules .next"
   },
   "dependencies": {
+    "antd": "^4.4.3",
+    "axios": "^0.19.2",
+    "classnames": "^2.2.6",
     "dayjs": "^1.8.33",
-    "express": "^4.16.1"
+    "koa": "^2.13.0",
+    "koa-bodyparser": "^4.3.0",
+    "koa-router": "^9.1.0",
+    "next": "9.5.1",
+    "qs": "^6.9.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "swr": "^0.2.3"
+  },
+  "devDependencies": {
+    "@types/node": "^14.0.26",
+    "@types/react": "^16.9.43",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.5.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
+    "less": "^3.12.2",
+    "rimraf": "^3.0.2",
+    "typescript": "^3.9.7"
   }
 }
