--- a/package.json
+++ b/package.json
@@ -5,20 +5,17 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "export": "next export",
-    "node": "node server.js",
     "rimraf": "rimraf node_modules .next"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "antd": "^4.4.3",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.33",
-    "koa": "^2.13.0",
-    "koa-bodyparser": "^4.3.0",
-    "koa-router": "^9.1.0",
-    "next": "9.5.1",
+    "next": "^9.5.2",
     "qs": "^6.9.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
