--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "antd": "^4.4.3",
-    "axios": "^0.19.2",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^4.6.2",
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
-    "dayjs": "^1.8.33",
-    "next": "^9.5.2",
+    "dayjs": "^1.8.34",
+    "next": "^9.5.3",
     "qs": "^6.9.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
