--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "qs": "^6.9.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "sass": "^1.26.10",
     "swr": "^0.2.3"
   },
   "devDependencies": {
