--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "next",
       "program": "${workspaceFolder}/node_modules/next/dist/bin/next"
     }
   ]
