--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "docker_web_app",
   "version": "0.0.1",
+  "private": true,
   "description": "Node.js on Docker",
   "scripts": {
     "dev": "next dev",
