--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.34",
+    "lodash": "^4.17.20",
     "next": "^9.5.3",
     "qs": "^6.9.4",
     "react": "16.13.1",
