--- a/package.json
+++ b/package.json
@@ -24,7 +24,12 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-infinite-scroller": "^1.2.4",
+    "react-redux": "^7.2.1",
     "react-use": "^15.3.4",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.26.10",
     "swr": "^0.2.3"
   },
