--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
     "ahooks": "^2.6.0",
     "antd": "^4.6.2",
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.34",
     "lodash": "^4.17.20",
+    "mobx": "^5.15.6",
+    "mobx-react": "^6.3.0",
     "next": "^9.5.3",
+    "node-fetch": "^2.6.1",
     "qs": "^6.9.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
