--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
     "ahooks": "^2.6.0",
     "antd": "^4.6.2",
     "axios": "^0.20.0",
@@ -34,10 +33,11 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.26.10",
     "swr": "^0.2.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-decorators": "^7.10.5",
     "@types/node": "^14.0.26",
     "@types/react": "^16.9.43",
     "babel-eslint": "^10.1.0",
@@ -48,6 +48,7 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.8",
     "rimraf": "^3.0.2",
+    "sass": "^1.26.10",
     "typescript": "^3.9.7"
   }
 }
