--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.34",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
     "mobx": "^5.15.6",
     "mobx-react": "^6.3.0",
