--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "lodash": "^4.17.20",
     "mobx": "^5.15.6",
     "mobx-react": "^6.3.0",
-    "next": ">=9.5.5",
+    "next": "^10.0.0",
     "node-fetch": "^2.6.1",
     "qs": "^6.9.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-infinite-scroller": "^1.2.4",
     "react-redux": "^7.2.1",
     "react-use": "^15.3.4",
