--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "docker_web_app",
   "version": "0.0.1",
   "private": true,
+  "author": "luqiangbovip@163.com",
   "description": "Node.js on Docker",
   "scripts": {
     "dev": "next dev",
@@ -11,45 +12,45 @@
     "rimraf": "rimraf node_modules .next"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.2.2",
-    "ahooks": "^2.6.0",
-    "antd": "^4.6.2",
-    "axios": "^0.20.0",
+    "@ant-design/icons": "^4.6.2",
+    "ahooks": "^2.10.0",
+    "antd": "^4.14.1",
+    "axios": "^0.21.1",
     "classnames": "^2.2.6",
-    "dayjs": "^1.8.34",
+    "dayjs": "^1.10.4",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.20",
-    "mobx": "^5.15.6",
-    "mobx-react": "^6.3.0",
-    "next": "^10.0.0",
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
+    "next": "^10.0.3",
     "node-fetch": "^2.6.1",
     "qs": "^6.9.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-redux": "^7.2.1",
+    "react-redux": "^7.2.2",
     "react-use": "^15.3.4",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
-    "swr": "^0.2.3"
+    "swr": "^0.3.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@types/node": "^14.0.26",
-    "@types/react": "^16.9.43",
+    "@babel/core": "^7.12.9",
+    "@babel/plugin-proposal-decorators": "^7.12.1",
+    "@types/node": "^14.14.10",
+    "@types/react": "^16.13.0",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.5.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint": "^7.14.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.26.10",
-    "typescript": "^3.9.7"
+    "sass": "^1.29.0",
+    "typescript": "^4.1.2"
   }
 }
