--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: caniuse/web:${{steps.get_version.outputs.VERSION}}
+          tags: caniuse/wanandroid-next:${{steps.get_version.outputs.VERSION}}
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
